# ethereum-censorship-monitor

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Cargo.toml  LICENSE  README.md  config.toml  pyproject.toml  rustfmt.toml  sqlx-data.json
.github/workflows/: monitor-ci.yml
backend/: api.py  main.py  mempool.py  rpc_client.py  transaction.py  util.py
backend/db/: database.py
backend/db/data/: schema.sql
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: NavBar.vue  Table.vue
frontend/src/routes/: Blocks.vue  Overview.vue  Stats.vue  Transactions.vue  Validators.vue
migrations/: 20221206134359_init.sql  20221210112621_proposal_timestamps.sql  20221210123333_indices.sql  20221210131532_constraints.sql  20221214182051_miss_view.sql  20230109172018_store_tip.sql  20230109181738_store_num_txs.sql  20230110163328_full_misses.sql  20230124112648_index_tx_hash.sql
monitor/: .env  Cargo.toml  config.toml  sqlx-data.json
monitor/migrations/: 20221128162326_monitor.sql  20221130134806_monitor.sql  20221206134359_init.sql
monitor/src/: analyze.rs  analyzer.rs  check_transaction.rs  cli.rs  config.rs  consensus_api.rs  create_db.sql  db.rs  head_history.rs  history.rs  main.rs  metrics.rs  nonce_cache.rs  pool.rs  simple_pool.rs  state.rs  types.rs  visibility.rs  watch.rs
monitor/src/db/: memory.rs
src/: analyze.rs  api.rs  check_gas.rs  check_gas_price.rs  check_transaction.rs  cli.rs  compare_providers.rs  consensus_api.rs  db.rs  head_history.rs  main.rs  metrics.rs  misses_query.sql  nonce_cache.rs  state.rs  types.rs  watch.rs
src/api/: block.rs  blocks_query.sql  errors.rs  handlers.rs  miss_range_bound.rs  miss_time_tuple.rs  misses_query.sql  mod.rs  queries.rs  requests.rs  responses.rs  tx.rs  txs_query.sql
