[tool.poetry]
name = "ethereum-censorship-monitor"
version = "0.1.0"
description = "A tool to monitor the Ethereum blockchain for censorship by block producers"
authors = ["Frederik Lührs <luehrs.fred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
web3 = "^5.30.0"
click = "^8.1.3"
websocket = "^0.2.1"
aiohttp_cors = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
