[package]
name = "monitor"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
log = { version = "0.4", features = ["std", "serde"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
rand = "0.8"
url = { version = "2.3.1", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
env_logger = "0.9.1"
reqwest-eventsource = "0.4.0"
futures = "0.3.25"
hex = "0.4.3"
rlp = "0.5.2"
clap = { version = "4.0.22", features = ["derive"] }
figment = { version = "0.10.8", features = ["toml", "env"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres", "chrono", "offline"] }
itertools = "0.10.5"
